fix: music times overlapping text

--- a/src/app/rsl-event/rsl-event.component.scss
+++ b/src/app/rsl-event/rsl-event.component.scss
@@ -6,14 +6,14 @@ h1 {
 h3 {
     font-family: 'Gelion Medium';
     padding-left: 1.5rem;
-    padding-top:0;
-    padding-bottom:0;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 span {
     padding-left: 0.5rem;
     opacity: 0.5;
-    color: var(--ion-color-dark)
+    color: var(--ion-color-dark);
 }
 
 .old {
@@ -28,10 +28,12 @@ span {
 }
 
 .time {
-    display:inline-block;
-    width: 70px;
+    display: inline-block;
+    width: 90px;
     text-align: right;
+    font-size: 0.9rem;
     opacity: 0.9;
+    padding-right: 0.5rem;
 }
 
 .star {
